# homework8

./: pyproject.toml
part1/: main.py  seed.py
part2/: config.ini  connect_RabbitMQ.py  consumer.py  models.py  producer.py
