[tool.poetry]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = ["jockerlol <jockerlol1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.0"
redis-lru = "^0.1.2"
mongoengine = "^0.27.0"
faker = "^19.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
